2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php: Added new slicebar graphs
	to the abstraction and merged the improved by miguel
	of gd progressbar function

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php: Fixes merged from
	miguel works on pandora like checks of empty
	color and legend parameters and checks of 
	min height for a graph

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	*  include/graphs/functions_pchart.php
	 include/graphs/functions_fsgraph.php
	 include/graphs/functions_gd.php
	 include/graphs/fgraph.php: Fixed long index
	 bug into stacked and line graphs. 
	 Added entry 
	 for polar and radar graphs (kiviat graphs)
	 Clean code

2011-04-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/functions_html.php
	include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/functions_reporting.php
	include/functions_inventories.php
	include/functions_incidents.php
	operation/incidents/incident.php
	operation/incidents/incident_tracking.php
	operation/incidents/incident_search.php
	operation/projects/task.php
	operation/projects/gantt.php
	operation/projects/task_detail.php
	operation/projects/project_detail.php
	operation/reporting/incidents_html.php
	operation/user_report/monthly_graph.php
	operation/user_report/report_full.php
	operation/user_report/report_full_graph.php
	operation/user_report/report_monthly.php
	general/home.php: Encapsulated inclusion of 
	FusionCharts javascript file into abstraction.
	Clean code

2011-04-12  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php: Merged changes from
	miguel works with stacked graphs, bugs fixes and cleaning
	code
